samples/_failures_safe/1761421508_541f9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ffa3dc8.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_4ffa3dc8.c:186:5: error: expected declaration or statement at end of input
  186 |     for (int i = 0; i < graph->vertices; i++) {
      |     ^~~
./samples/SAFE/__tmp_4ffa3dc8.c:186:5: error: expected declaration or statement at end of input
